<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItem"
    android:orientation="vertical">

   <android.support.v7.widget.LinearLayoutCompat
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:padding="10dp">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/item"
           android:textSize="20sp"
           android:layout_marginEnd="20dp"
           android:textStyle="bold"/>

       <EditText
           android:id="@+id/item_name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/enter_item"
           android:maxLength="10"/>

   </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="20sp"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/item_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_type"
            android:maxLength="10"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>
</LinearLayout>