<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WhoYou"
    android:id="@+id/layout_who_you">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background2"
        android:contentDescription="@string/are_you"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:paddingTop="20dp"
        android:contentDescription="@string/are_you"/>

    <TextView
        android:id="@+id/are_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        android:text="@string/are_you"
        android:textStyle="bold"
        android:layout_marginTop="220dp"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/who_you_button"
            android:backgroundTint="#00BCD4"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/admin"
            android:textAllCaps="false"
            android:textSize="30sp" />

        <Button
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/who_you_button"
            android:text="@string/user"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:layout_marginStart="40dp"
            android:backgroundTint="#F44336"/>

    </LinearLayout>
    </LinearLayout>
</FrameLayout>